pci-dss/deny-ingress-creation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-ingress-creation
  annotations:
    policies.kyverno.io/title: deny Ingress Creation
    policies.kyverno.io/category: Networking
    policies.kyverno.io/severity: medium
    policies.kyverno.io/category: PCI DSS Compliance
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/standards: "pci-dss"
    policies.nirmata.io/pci-dss-control: "1.3"
    policies.kyverno.io/description: >-
      Ingress provides routing rules to manage access to the services within a Kubernetes cluster. 
      This policy blocks the creation of Kubernetes ingress resources.
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: deny-ingress-creation
    match:
      any:
      - resources:
          kinds:
          - Ingress
    validate:
      message: "Ingress creation is not allowed."
      deny: {}
