pci-dss/disallow-default-service-account.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-serviceaccount
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/title: Disallow Default Serviceaccount
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/category: PCI DSS Compliance
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/standards: "pci-dss,soc2"
    policies.nirmata.io/pci-dss-control: "7.1"
    policies.kyverno.io/description: >-
      Kubernetes Service account provides an identity for processes that run in a Pod,
      and maps to a ServiceAccount object. When you authenticate to the API server,
      you identify yourself as a particular user. Kubernetes recognises the concept
      of a user, however, Kubernetes itself does not have a User API. Service account
      should be required and the default service account should not be used.
      This policy validates that Pods specify a service account name other than `default`.
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: validate-serviceaccount
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Using 'default' service account is not allowed."
      pattern:
        spec:
          serviceAccount: "!default"
          serviceAccountName: "!default"
