pci-dss/restrict-basic-auth-secret.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-secrets
  annotations:
    policies.kyverno.io/title: check secrets
    policies.kyverno.io/category: PCI DSS Compliance
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Secrets
    policies.kyverno.io/category: PCI DSS Compliance
    policies.kyverno.io/standards: "pci-dss,soc2"
    policies.nirmata.io/pci-dss-control: "8.2"
    policies.kyverno.io/description: >-
      Secrets like registry credentials often need to exist in multiple
      Namespaces so Pods there have access. This policy will check for
      the username and password present in a secret.
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: check-secrets
    match:
      any:
      - resources:
          kinds:
          - Secret
    validate:
      message: "Cannot define username and password in secret"
      pattern:
        data:
          username: null
          password: null
